# Unified-RAG-Studio

./: .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  TASKS.md  UNIFIED_RAG_STUDIO_CLAUDE.md  package-lock.json  package.json
.claude/: settings.json  settings.local.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 001_initial_schema.py  002_project_soft_delete.py
apps/api/app/: config.py  dependencies.py  main.py  metadata.py
apps/api/app/core/: __init__.py
apps/api/app/core/adaptive_policies/: __init__.py  evaluate.py
apps/api/app/core/agents/: __init__.py  chunking_optimizer.py  deployment_agent.py  document_analyst.py  embedding_tester.py  evaluation_agent.py  graph.py  progress.py  prompts.py  retrieval_optimizer.py  state.py  tools.py
apps/api/app/core/chunking/: __init__.py  code_aware.py  document_based.py  fixed_size.py  optimizers.py  recursive.py  semantic.py  sentence.py  strategies.py
apps/api/app/core/context_compression/: __init__.py  apply.py  pipeline_bridge.py
apps/api/app/core/embedding/: __init__.py  benchmarker.py  cache.py  cohere.py  google.py  huggingface.py  nomic.py  openai.py  strategies.py
apps/api/app/core/evaluation/: __init__.py  compare.py  failure_analysis.py  pipeline_bridge.py  ragas_bridge.py  retrieval_metrics.py  service.py  strategies.py  synthetic.py
apps/api/app/core/generation/: __init__.py  factory.py  pipeline_bridge.py  prompts.py  service.py  strategies.py
apps/api/app/core/guardrails/: __init__.py  base.py  configure_manager.py  manager.py  metrics.py  orchestrator.py  policy_loader.py  stubs.py  types.py
apps/api/app/core/guardrails/input/: __init__.py  injection.py  pii.py  toxicity.py
apps/api/app/core/guardrails/output/: __init__.py  citation.py  context_refs.py  factuality.py  hallucination.py
apps/api/app/core/guardrails/retrieval/: __init__.py  bias.py  content_filter.py  source_validation.py
apps/api/app/core/ingestion/: __init__.py  extractors.py  loaders.py  preprocessors.py
apps/api/app/core/query_processing/: __init__.py  expand.py
apps/api/app/core/rag/: __init__.py  guarded_runner.py
apps/api/app/core/retrieval/: __init__.py  bm25.py  fusion.py  pipeline_bridge.py  rerankers.py  service.py  strategies.py
apps/api/app/core/routing/: __init__.py  resolver.py
apps/api/app/core/security/: auth.py
apps/api/app/core/utilities/: __init__.py  cost.py
apps/api/app/core/vectorstore/: __init__.py  factory.py  pinecone_client.py  qdrant_client.py  strategies.py  weaviate_client.py
apps/api/app/models/: __init__.py  activity_log.py  api_key.py  auth_tokens.py  base.py  build_history.py  deployment.py  evaluation_run.py  pipeline_config.py  project.py  subscription_plan.py  user.py  user_subscription.py
apps/api/app/observability/: __init__.py  context.py  logging_setup.py  rag_metrics.py  registry.py
apps/api/app/routers/: __init__.py  admin.py  analytics.py  api_keys.py  auth.py  autopilot.py  deployment.py  designer.py  evaluation.py  health.py  jobs.py  monitoring.py  projects.py  subscriptions.py  templates.py  users.py  utilities.py
apps/api/app/schemas/: __init__.py  admin.py  analytics.py  api_key.py  auth.py  autopilot.py  deployment.py  designer.py  evaluation.py  guardrails.py  jobs.py  pipeline.py  project.py  subscription.py  templates.py  user.py  utilities.py
apps/api/app/services/: analytics_service.py  autopilot_build_result.py  autopilot_build_service.py  autopilot_dashboard_metrics.py  autopilot_object_storage.py  cost_service.py  deployment_service.py  designer_service.py  evaluation_service.py  export_service.py  mlflow_tracking.py  project_service.py  rag_preview_service.py  template_service.py
apps/api/app/services/export_generators/: __init__.py  _compat.py  docker_k8s_export.py  python_export.py  terraform_export.py  yaml_export.py
apps/api/app/utils/: __init__.py  cost_calculator.py
apps/api/app/worker/: __init__.py  celery_app.py  db_sync.py  tasks.py
apps/api/catalogs/: pricing.json
apps/api/config/guardrails/examples/: bias_patterns.example.json  toxicity.example.json
apps/api/tests/: conftest.py  test_autopilot_dashboard_metrics.py  test_autopilot_router.py  test_deployment_router.py  test_designer.py  test_evaluation_router.py  test_export.py  test_guardrail_metrics.py  test_health.py  test_jobs_router.py  test_observability_p11.py  test_projects.py  test_templates.py  test_utilities.py
apps/api/tests/test_core/: test_adaptive_policies.py  test_agents_langgraph.py  test_chunking.py  test_chunking_optimizer.py  test_context_compression.py  test_document_analyst.py  test_embedding.py  test_evaluation.py  test_generation.py  test_guarded_rag_integration.py  test_guardrails.py  test_guardrails_policy_loader.py  test_ingestion.py  test_input_guardrails.py  test_output_guardrails.py  test_query_processing_expand.py  test_retrieval.py  test_retrieval_guardrails.py  test_retrieval_metrics.py  test_routing_resolver.py  test_vectorstore.py
apps/api/tests/test_integration/: __init__.py  conftest.py  helpers.py  test_autopilot_integration.py  test_designer_pipeline_integration.py  test_evaluation_integration.py
apps/api/tests/test_schemas/: test_human_in_the_loop_schema.py
apps/api/tests/test_services/: test_autopilot_build_result.py  test_evaluation_service_helpers.py  test_mlflow_tracking.py
apps/api/tests/test_utils/: test_cost_calculator.py
data/: chunking-strategies.json  cloud-providers.json  retrieval-strategies.json  templates.json  vector-stores.json
(+245 files in other folders)
