[project]
name = "rag-studio-api"
version = "1.0.0"
description = "RAG Studio — FastAPI backend with LangGraph agents"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis[hiredis]>=5.0.0",
    "fakeredis>=2.20.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "anyio>=4.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.1.0",
    "openai>=1.10.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.7.0",
    "langchain-qdrant>=0.1.0",
    "celery>=5.3.0",
    "minio>=7.2.0",
]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "T20", # flake8-print (no stray print statements)
]
ignore = [
    "S101",  # Use of assert — acceptable in tests
    "B008",  # Do not perform function calls in default arguments (FastAPI Depends pattern)
    "N818",  # Exception name should end with Error — some intentional names
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "T20"]  # Allow assert + hardcoded test credentials
"app/core/agents/prompts.py" = ["E501"]  # Prompt strings are intentionally long natural language

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ─── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
exclude = ["alembic/"]

# ─── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "unit: fast unit tests with mocks",
    "integration: slower tests requiring real services",
    "e2e: full end-to-end tests",
]

# ─── coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["app/worker/*", "alembic/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
